--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -28,11 +28,12 @@ body, html {
 
 
 .page-heading {
-  background-image: url(../img/heading_bg.png);
+  background-image: url(../image/bg.jpeg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
   width: 100%;
+  height: 50%;
   text-align: center;
 }
 
@@ -774,6 +775,7 @@ footer a:hover {
  .services {
   background-color: #232323;
   padding: 65px 0px;
+  height: 50%;
  }
 
  .services .service-item {
@@ -818,12 +820,13 @@ footer a:hover {
 
 
 .more-about-us {
-  background-image: url(../img/about_us.png);
+  background-image: url(../image/16.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
   background-position: center center;
   width: 100%;
+  height: 100%;
   text-align: center;
 }
 
